--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,17 +1,17 @@
 <!doctype html>
 <html>
 <head>
-    <title>21 Savage Fan Site</title>
+    <title>Caloric Intake Calculator</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/Savage-Authentication/savage-auth/public/style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
 <div class="container">
 
     <div class="jumbotron text-center">
-        <h1>21 Savage Fan Site</h1>
-        <img src="img/savage21.jpg" alt="21 Savage Profile Photo">
+        <h1>Caloric Intake Calculator</h1>
+        <img src="img/caloric-intake-cover.jpg" alt="Photo of female athlete back towards you raising arms in the air from her sides">
 
         <p>Login or Signup:</p>
 
